--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="images/image-qr-code.png" type="image/x-icon">
 </head>
 <body> 
-  <div class="container">
+  <main class="container">
     <div class="top">
       <img class="top-img" src="images/image-qr-code.png" alt="image-qr-code">
     </div>
@@ -17,6 +17,6 @@
       <h1 class="head">Improve your front-end skills by building projects</h1>
       <p class="para">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
-  </div> 
+  </main> 
 </body>
 </html>
